Fix z-index of global nav button

--- a/source/wakaba.css
+++ b/source/wakaba.css
@@ -174,6 +174,7 @@ body > nav > #menu_button {
     display: flex;
     justify-content: center;
     align-items: center;
+    z-index: 18;
     border-radius: 15%;
     background-color: #f0fcfc;
     box-shadow: 0 0 4px #cfe;
